[package]
authors = ["Kaspar Schleiser <kaspar@schleiser.de>"]
edition = "2018"
readme = "README.md"
name = "riotboot-rs"
version = "0.1.0"

[dependencies]
panic-halt = "0.2.0"

cortex-m = "0.7.1"
cortex-m-rt = "0.6.13"
cortex-m-semihosting = "0.3.7"

fletcher = { git = "https://github.com/jbangelo/fletcher" }

# this lets you use `cargo fix`!
[[bin]]
name = "riotboot-rs"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
